@@ -53,8 +53,8 @@ post$yhat.test.975=apply(post$yhat.test, 2, quantile, probs=0.975)
 post2$yhat.test.025=apply(post2$yhat.test, 2, quantile, probs=0.025)
 post2$yhat.test.975=apply(post2$yhat.test, 2, quantile, probs=0.975)
 
-pdf('modlisa.pdf')
-plot(x, 20*x, type='l', xlab='x3', ylab='f(x3)', col=4, lwd=2)
+##pdf('modlisa.pdf')
+plot(x, f(x.test), type='l', xlab='x3', ylab='f(x3)', col=4, lwd=2)
 lines(x, post$yhat.test.mean, lwd=2, lty=1)
 lines(x, post$yhat.test.025, lwd=2, lty=2)
 lines(x, post$yhat.test.975, lwd=2, lty=2)
@@ -63,4 +63,4 @@ lines(x, post2$yhat.test.025, lwd=2, lty=2, col=2)
 lines(x, post2$yhat.test.975, lwd=2, lty=2, col=2)
 legend('topleft', col=c(4, 1, 2), lty=1,
        legend=c('True', '1 shard', '10 shards'), lwd=2)
-dev.off()
+##dev.off()
